<android.support.design.widget.CoordinatorLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:background="@color/Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/MyAppbar"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapse_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimaryDark"
            android:fitsSystemWindows="true">

            <!-- here we have the image that appears in toolbar -->

            <ImageView
                android:id="@+id/bgheader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                android:background="@drawable/amandinebig"
                app:layout_collapseMode="pin" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/MyToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="parallax" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="24dp">

    <android.support.v7.widget.CardView
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- here we have the line codes for the "ingrediente" card_one string textview -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textDark"
                android:textSize="24sp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/card_one"/>
            <!-- here i add the multiple checkboxes that i need for my ingredients -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pentru blat"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/textMedium"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textSize="13sp"
                android:textColor="@color/colorAccentR"
                android:buttonTint="@color/colorAccentR"
                android:text="6 oua"/>
            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textSize="13sp"
                android:textColor="@color/colorAccentR"
                android:buttonTint="@color/colorAccentR"
                android:text="200 gr zahar"/>
            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textSize="13sp"
                android:textColor="@color/colorAccentR"
                android:buttonTint="@color/colorAccentR"
                android:text="40 ml apa"/>
            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textSize="13sp"
                android:textColor="@color/colorAccentR"
                android:buttonTint="@color/colorAccentR"
                android:text="40 ml ulei" />
            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textSize="13sp"
                android:textColor="@color/colorAccentR"
                android:buttonTint="@color/colorAccentR"
                android:text="4 linguri cacao"/>
            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textSize="13sp"
                android:textColor="@color/colorAccentR"
                android:buttonTint="@color/colorAccentR"
                android:text="200 gr faina"/>
            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textSize="13sp"
                android:textColor="@color/colorAccentR"
                android:buttonTint="@color/colorAccentR"
                android:text="un plic praf de copt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pentru crema"
                android:textColor="@color/textMedium"
                android:textSize="15sp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textStyle="bold"/>
            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textSize="13sp"
                android:textColor="@color/colorAccentR"
                android:buttonTint="@color/colorAccentR"
                android:text="3 oua"/>
            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textSize="13sp"
                android:textColor="@color/colorAccentR"
                android:buttonTint="@color/colorAccentR"
                android:text="400 gr unt"/>
            <CheckBox
                android:id="@+id/checkBox10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textSize="13sp"
                android:textColor="@color/colorAccentR"
                android:buttonTint="@color/colorAccentR"
                android:text="250 gr zahar"/>
            <CheckBox
                android:id="@+id/checkBox11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textSize="13sp"
                android:textColor="@color/colorAccentR"
                android:buttonTint="@color/colorAccentR"
                android:text="4 linguri cacao"/>
            <CheckBox
                android:id="@+id/checkBox12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textSize="13sp"
                android:textColor="@color/colorAccentR"
                android:buttonTint="@color/colorAccentR"
                android:text="2 fiole esenta de rom"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sirop din zahar caramelizat"
                android:textColor="@color/textMedium"
                android:textSize="15sp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textStyle="bold"/>
            <CheckBox
                android:id="@+id/checkBox13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textSize="13sp"
                android:textColor="@color/colorAccentR"
                android:buttonTint="@color/colorAccentR"
                android:text="500 ml apa"/>
            <CheckBox
                android:id="@+id/checkBox14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textSize="13sp"
                android:textColor="@color/colorAccentR"
                android:buttonTint="@color/colorAccentR"
                android:text="250 gr zahar"/>
            <CheckBox
                android:id="@+id/checkBox15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textSize="13sp"
                android:textColor="@color/colorAccentR"
                android:buttonTint="@color/colorAccentR"
                android:text="2 plicuri cappucino de ciocolata"/>
            <CheckBox
                android:id="@+id/checkBox16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textSize="13sp"
                android:textColor="@color/colorAccentR"
                android:buttonTint="@color/colorAccentR"
                android:text="1 fiola esenta de rom"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pentru glazura fondant"
                android:textColor="@color/textMedium"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <CheckBox
                android:id="@+id/checkBox17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textSize="13sp"
                android:textColor="@color/colorAccentR"
                android:buttonTint="@color/colorAccentR"
                android:text="10 lingur zahar"/>
            <CheckBox
                android:id="@+id/checkBox18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textSize="13sp"
                android:textColor="@color/colorAccentR"
                android:buttonTint="@color/colorAccentR"
                android:text="10 linguri cacao"/>
            <CheckBox
                android:id="@+id/checkBox19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textSize="13sp"
                android:textColor="@color/colorAccentR"
                android:buttonTint="@color/colorAccentR"
                android:text="12 linguri lapte"/>
            <CheckBox
                android:id="@+id/checkBox20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textSize="13sp"
                android:textColor="@color/colorAccentR"
                android:buttonTint="@color/colorAccentR"
                android:text="100 gr unt"/>
            <CheckBox
                android:id="@+id/checkBox21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textSize="13sp"
                android:textColor="@color/colorAccentR"
                android:buttonTint="@color/colorAccentR"
                android:text="200 gr serbet de ciocolata"/>


            <!-- here i finish adding the checkboxes for ingredients-->
            
        </LinearLayout>

    </android.support.v7.widget.CardView>

            <!-- here is the end of card one "Ingrediente" -->



            <!-- here is the beginning of card two "mod de preparare" -->

    <android.support.v7.widget.CardView
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="100dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textDark"
                android:textSize="20sp"
                android:text="@string/card_two"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Preparare blat"
                android:textColor="@color/textMedium"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AmandineBlat"
                android:textColor="@color/textLight"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Preparare crema"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/textMedium"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AmandineCrema"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/textLight"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Preparere sirop"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/textMedium"
                android:textSize="15sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AmandineSirop"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/textLight"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Preparare glazura"
                android:textColor="@color/textMedium"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AmandineGlazura"
                android:textColor="@color/textLight"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="12sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ansamblarea amandinei"
                android:textColor="@color/textMedium"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Amandine"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/textLight"
                android:textSize="12sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>